[gd_scene load_steps=4 format=3 uid="uid://dpvjalulucwry"]

[ext_resource type="Script" uid="uid://c8s7b12j8v68e" path="res://scripts/ui/MobileControls.gd" id="1_8hpay"]

[sub_resource type="CircleShape2D" id="CircleShape2D_mqm6r"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_treeb"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("1_8hpay")

[node name="VirtualJoystick" type="TouchScreenButton" parent="."]
shape = SubResource("CircleShape2D_mqm6r")

[node name="LookArea" type="TouchScreenButton" parent="."]
shape = SubResource("RectangleShape2D_treeb")

[node name="UpButton" type="Button" parent="."]
layout_mode = 0
offset_right = 8.0
offset_bottom = 8.0

[node name="DownButton" type="Button" parent="."]
layout_mode = 0
offset_right = 8.0
offset_bottom = 8.0
